# Campus-Connect

./: .replit  pyproject.toml  replit.md
artifacts/campus-connect/: config.py  run.py  seed.py
artifacts/campus-connect/app/: __init__.py  models.py
artifacts/campus-connect/app/auth/: __init__.py  routes.py
artifacts/campus-connect/app/calendar/: __init__.py  routes.py
artifacts/campus-connect/app/campus/: __init__.py  routes.py
artifacts/campus-connect/app/chat/: __init__.py  routes.py
artifacts/campus-connect/app/classroom/: __init__.py  routes.py
artifacts/campus-connect/app/notices/: __init__.py  routes.py
artifacts/campus-connect/app/templates/: base.html
artifacts/campus-connect/app/templates/auth/: login.html  profile.html  register.html
artifacts/campus-connect/app/templates/calendar/: day.html  index.html
artifacts/campus-connect/app/templates/campus/: create_announcement.html  create_event.html  event_detail.html  events.html  feed.html  moderation.html  my_events.html
artifacts/campus-connect/app/templates/chat/: ai.html  index.html  room.html
artifacts/campus-connect/app/templates/classroom/: add_material.html  create.html  index.html  join.html  view.html
artifacts/campus-connect/app/templates/notices/: create.html  index.html
