[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "eventlet>=0.41.0",
    "flask>=3.1.3",
    "flask-bcrypt>=1.0.1",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-socketio>=5.6.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.3.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
]
